--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "ejs": "~2.6.1",
+    "email-validator": "^2.0.4",
     "express": "~4.16.1",
+    "express-ejs-extend": "^0.0.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.30.1",
     "morgan": "~1.9.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.4"
