--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
-    "ejs": "~2.6.1",
+    "ejs": "^3.1.10",
     "email-validator": "^2.0.4",
-    "express": "~4.16.1",
+    "express": "^4.19.2",
     "express-ejs-extend": "^0.0.1",
     "http-errors": "~1.6.3",
     "moment": "^2.30.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.4"
   }
